Repairs alignment issues with check boxes in categories
added new .no-background userCls

--- a/app/view/reporting/Selector.scss
+++ b/app/view/reporting/Selector.scss
@@ -62,7 +62,9 @@
     );
 }
 
-
+.no-background {
+    background:transparent !important;
+}
 
 
 
@@ -219,8 +221,14 @@
     $background-color: map-get($reporting-colors, 'base'),
     $selected-background-color: map-get($reporting-colors, 'base'),
     $hovered-background-color: map-get($reporting-colors, 'base'),
-    $font-size: map-get($root-font-sizes, 'detail') !important
+    $font-size: map-get($root-font-sizes, 'detail') !important,
+
+    $padding: 10pt 0pt 10pt 11.6pt
+
 );
+
+
+
 
 @include panel-ui(
     $ui: 'reporting-list-panel',
